--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,11 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	
 	<!-- Style dependencies -->
-	<link href="https://unpkg.com/normalize.css@^7.0.0" rel="stylesheet" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		rel="stylesheet" 
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
 		crossorigin="anonymous" />
+	<!-- <link href="https://unpkg.com/normalize.css@^7.0.0" rel="stylesheet" /> -->
 	<!-- Blueprint stylesheets -->
 	<link href="https://unpkg.com/@blueprintjs/icons@^3.4.0/lib/css/blueprint-icons.css" rel="stylesheet" />
 	<link href="https://unpkg.com/@blueprintjs/core@^3.10.0/lib/css/blueprint.css" rel="stylesheet" />
