Revamp design with Bootstrap 4

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset='utf8'>
@@ -6,18 +6,9 @@
 
 	<title>MLsploit</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='icon' type='image/png' href='/assets/img/favicon.png'>
 	
-	<!-- Style dependencies -->
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-		rel="stylesheet" 
-		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-		crossorigin="anonymous" />
-	<!-- <link href="https://unpkg.com/normalize.css@^7.0.0" rel="stylesheet" /> -->
-	<!-- Blueprint stylesheets -->
-	<link href="https://unpkg.com/@blueprintjs/icons@^3.4.0/lib/css/blueprint-icons.css" rel="stylesheet" />
-	<link href="https://unpkg.com/@blueprintjs/core@^3.10.0/lib/css/blueprint.css" rel="stylesheet" />
-	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel='stylesheet' href='/assets/css/global.css'>
 	<link rel='stylesheet' href='/assets/css/bundle.css'>
 
@@ -25,34 +16,12 @@
 </head>
 
 <body>
-	<!-- Blueprint dependencies -->
-	<script src="https://unpkg.com/classnames@^2.2"></script> 
-	<script src="https://unpkg.com/dom4@^1.8"></script> 
-	<script src="https://unpkg.com/tslib@^1.9.0"></script> 
-	<script src="https://unpkg.com/react@^16.2.0/umd/react.production.min.js"></script> 
-	<script src="https://unpkg.com/react-dom@^16.2.0/umd/react-dom.production.min.js"></script> 
-	<script src="https://unpkg.com/react-transition-group@^2.2.1/dist/react-transition-group.min.js"></script> 
-	<script src="https://unpkg.com/popper.js@^1.14.1/dist/umd/popper.js"></script> 
-	<script src="https://unpkg.com/react-popper@^1.0.0/dist/index.umd.min.js"></script> 
-	<script src="https://unpkg.com/resize-observer-polyfill@^1.5.0"></script> 
-	<!-- Blueprint packages (note: icons script must come first) -->
-	<script src="https://unpkg.com/@blueprintjs/icons@^3.4.0"></script> 
-	<script src="https://unpkg.com/@blueprintjs/core@^3.10.0"></script> 
+	
+	<div id="app" class="h-100"></div>
 
-	<div id="app"></div>
-
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" 
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" 
-		crossorigin="anonymous">
-	</script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" 
-		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" 
-		crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" 
-		crossorigin="anonymous">
-	</script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 	<script defer src='/assets/js/bundle.js'></script>
 </body>
